# intro-ai-agents

./: .gitignore  LICENSE  Makefile  config.toml  portfolio.json  pyproject.toml  requirements.txt
lessons/lesson_01_prompting/: README.md  config.toml  llmutils.py  simple_llm.py  simple_prompt.py
lessons/lesson_02_function_calling/: README.md  config.json  func_call.py  tools.py
src/: download_financial_data.py  llmutils.py  simple_llm.py  simple_prompt.py
src/ai_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
